pass package opening options to subprocess in an arguments file